--- a/public/tmpl/inc/adminBlogpostEditControls.tmpl
+++ b/public/tmpl/inc/adminBlogpostEditControls.tmpl
@@ -7,6 +7,6 @@
 	</div>
 
 	<div class="six columns text_right">
-		<button type="submit" name="save">Save</button>
+		<button type="submit" name="save" value="save">Save</button>
 	</div>
 </div>
