--- a/public/tmpl/adminBlogpostEdit.tmpl
+++ b/public/tmpl/adminBlogpostEdit.tmpl
@@ -5,7 +5,8 @@
 	'selector': 'textarea',
 	'toolbar': 'undo redo | bold italic underline strikethrough | subscript superscript | link unlink | removeformat',
 	'menubar': false,
-	'plugins': 'link'
+	'plugins': 'link',
+	'valid_elements': 'p|strong|a|em|span|sup|sub'
 });</script>
 <form method="post">
 
