Fixed valid elements

--- a/public/tmpl/adminBlogpostEdit.tmpl
+++ b/public/tmpl/adminBlogpostEdit.tmpl
@@ -6,7 +6,7 @@
 	'toolbar': 'undo redo | bold italic underline strikethrough | subscript superscript | link unlink | removeformat',
 	'menubar': false,
 	'plugins': 'link',
-	'valid_elements': 'p|strong|a|em|span|sup|sub'
+	'valid_elements': 'p,strong,a,em,span,sup,sub'
 });</script>
 <form method="post">
 
