--- a/public/tmpl/adminBlogposts.tmpl
+++ b/public/tmpl/adminBlogposts.tmpl
@@ -24,7 +24,7 @@
 		}
 	%>
 		<tr>
-			<td><a href="adminBlogpostEdit?langs=sv,en&id=<%= entry.id %>"><%= entry.id %></a></td>
+			<td><a href="adminBlogpostEdit?langs=en&id=<%= entry.id %>"><%= entry.id %></a></td>
 			<td><%= entry.langs[lang].header %></td>
 			<td><%= _.moment(entry.created).format('YYYY-MM-DD') %></td>
 			<td><% if (entry.published) print(_.moment(entry.published).format('YYYY-MM-DD HH:mm:ss')); else print('No'); %></td>
