Added summary, images and more

--- a/public/tmpl/adminBlogpostEdit.tmpl
+++ b/public/tmpl/adminBlogpostEdit.tmpl
@@ -15,7 +15,7 @@
 		'allowSpaces': true
 	});
 });</script>
-<form method="post">
+<form method="post" enctype="multipart/form-data">
 
 	<%= _.render('inc/adminBlogpostEditControls', obj) %>
 
@@ -89,6 +89,44 @@
 				</div>
 			<% } %>
 		</div>
+
+		<% if (global.urlParsed.query.id) { %>
+		<div class="row">
+			<% var i = 0; %>
+			<% while (i < 5) { %>
+				<% i ++; %>
+
+				<div class="two columns">
+					<% _.each(dbImages, function(image) { %>
+						<% if (image.slug.substring(0, 16 + global.urlParsed.query.id.toString().length + i.toString().length) === 'blog_entry' + global.urlParsed.query.id + '_image' + i) { %>
+							<img src="/uploaded/images/<%= image.slug %>?width=200" alt="" style="width: 100%" />
+						<% } %>
+					<% }); %>
+					<p style="font-size: 1px; height: 1px;">&nbsp;</p>
+				</div>
+			<% } %>
+		</div>
+
+		<div class="row">
+			<% var i = 0; %>
+			<% while (i < 5) { %>
+				<% i ++; %>
+
+				<div class="two columns">
+					<% _.each(dbImages, function(image) { %>
+						<% var shortSlug = 'blog_entry' + global.urlParsed.query.id + '_image' + i; %>
+						<% if (image.slug.substring(0, 16 + global.urlParsed.query.id.toString().length + i.toString().length) === shortSlug) { %>
+							<label for="<%= shortSlug %>">
+								<input type="checkbox" name="rm_image_<%= i %>" />
+								<span class="label-body">Delete</span>
+							</label>
+						<% } %>
+					<% }); %>
+					<p style="font-size: 1px; height: 1px;">&nbsp;</p>
+				</div>
+			<% } %>
+		</div>
+		<% } %>
 	</fieldset>
 	<% }); %>
 
