Fixed compability with larvitadmingui 0.3.x

--- a/public/tmpl/adminBlogpostEdit.tmpl
+++ b/public/tmpl/adminBlogpostEdit.tmpl
@@ -1,5 +1,5 @@
 <%= _.render('inc/head', obj) %>
-<%= _.render('inc/page_top', obj) %>
+<%= _.render('inc/pageTop', obj) %>
 <script src="//tinymce.cachefly.net/4.2/tinymce.min.js"></script>
 <script>tinymce.init({
 	'selector': 'textarea',
