Fixed tinyMCE path and lang support just like larvitcms

--- a/public/tmpl/adminBlogpostEdit.tmpl
+++ b/public/tmpl/adminBlogpostEdit.tmpl
@@ -1,6 +1,6 @@
 <%= _.render('inc/head', obj) %>
 <%= _.render('inc/pageTop', obj) %>
-<script src="//tinymce.cachefly.net/4.2/tinymce.min.js"></script>
+<script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
 <script>tinymce.init({
 	'selector': 'textarea',
 	'toolbar': 'undo redo | bold italic underline strikethrough | bullist numlist | subscript superscript | link unlink | removeformat code',
