--- a/public/tmpl/inc/adminBlogpostEditControls.tmpl
+++ b/public/tmpl/inc/adminBlogpostEditControls.tmpl
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="six columns">
 		<a href="/adminBlogposts" class="button">Cancel</a>
-		<% if (global.urlParsed.query.id) { %>
+		<% if (global.urlParsed.query.uuid) { %>
 			<button type="submit" name="delete">Delete entry</button>
 		<% } %>
 	</div>
